# TinyRequest

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  icon.rc  icon.res  main.c  main.cpp
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
debian/DEBIAN/: control  postinst  postrm
debian/usr/share/applications/: tinyrequest.desktop
debian/usr/share/doc/tinyrequest/: changelog  copyright
include/: app_state.h  collections.h  error_handler.h  font_awesome.h  http_client.h  json_processor.h  memory_manager.h  persistence.h  request_response.h  request_state.h  resource.h  theme.h  ui_components.h  ui_style.h
include/app/: app_core.h  app_theme.h  app_types.h  app_window.h
include/ui/: theme.h  ui_core.h  ui_dialogs.h  ui_main_tabs.h  ui_manager.h  ui_panels.h  ui_request_panel.h  ui_response_panel.h
resources/: resources.rc
scripts/: build.sh  build_and_package.sh  create_release.sh  fetch_dependencies.sh
src/: app_state.c  collections.c  error_handler.c  font_awesome.cpp  http_client.c  json_processor.c  memory_manager.c  persistence.c  request_response.c  request_state.c  theme.c  ui_components.c  ui_manager.cpp
src/app/: app_core.cpp  app_theme.cpp  app_window.cpp
src/json/: json_formatter.c  json_renderer.c  json_tokenizer.c  json_validator.c
src/ui/: error_handling.c  method_selector.c  response_viewer.c  theme.cpp  ui_core.cpp  ui_dialogs.cpp  ui_main_tabs.cpp  ui_panels.cpp  ui_request_panel.cpp  ui_response_panel.cpp  ui_style.c  ui_utils.c  url_input.c  validation.c
tests/: debug_url.c  demo_request_state.c  test_async_http.c  test_headers_editor.c  test_http_client.c  test_json_functionality.c  test_loading_indicators.c  test_memory_management.c  test_performance_optimizations.c  test_progress_features.c  test_request_state.c  test_state_utilities.c  test_theme.c  theme_test_impl.c
